# aviation-calculator

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: publish.yml  rust.yml
src/: fk9.rs  lib.rs  meteorology.rs  meterology.rs  navigation.rs  utils.rs
tests/: integration_test.rs
