[package]
name = "aviation-calculator"
version = "0.2.1"
edition = "2021"
description = "Useful calculations for aviators"
authors = ["Nico Löber <nico@php-perfect.de>"]
license = "MIT"
documentation = "https://github.com/php-perfect/aviation-calculator/wiki"
repository = "https://github.com/php-perfect/aviation-calculator"
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
    "/src/**",
]

[dependencies]
snafu = "0.7.5"

[dependencies.enterpolation]
version = "0.2"
default-features = false
# re-enable all wanted features
features = ["std"]
